SBOM-970 Add Binary File Name in CycloneDx PDF Exports (#12772)